// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Artifact - For Artifact tests initial render 1`] = `
<div
  class="bp3-dialog selectArtifactModal padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipeline.artifactTriggerConfigPanel.selectAnArtifact
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="TableV2--table selectArtifactTable"
  >
    <div
      class="TableV2--header"
      role="row"
    >
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactName"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACT
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactRepository"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 18%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactManifestLocation"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 13%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactBuildTag"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.BUILDTAGARTIFACTPATH
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 18%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactManifestRuntimeInputs"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
            </span>
          </div>
        </p>
      </div>
    </div>
    <div
      class="TableV2--body"
    >
      <div
        class="TableV2--row TableV2--card TableV2--clickable"
        role="row"
      >
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 5%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            style="justify-content: center;"
          >
            <div>
              <label
                class="bp3-label"
              />
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="artifactLabel"
                  type="radio"
                  value="stagea: Primary"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 25%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 176px;"
            >
              stagea: Primary
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 25%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 159px;"
            >
              Runtime Input
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 18%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
            />
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 13%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1; width: 100px;"
            />
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 18%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Yes
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer"
  >
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
      data-name="selectBtn"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        select
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main cancel Button--with-current-color Button--variation Button--variation-tertiary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        cancel
      </span>
    </button>
  </div>
</div>
`;

exports[`Select Artifact - For Artifact tests on click of apply button 1`] = `
<div
  class="bp3-dialog selectArtifactModal padded-dialog runtimeInputs"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipeline.artifactTriggerConfigPanel.configureArtifactRuntimeInputs
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.stagea.Service.Artifacts.Sidecars"
  />
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer"
  >
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow Button--withLeftIcon Button--variation Button--variation-secondary"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        filters.apply
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main cancel Button--with-current-color Button--variation Button--variation-tertiary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        cancel
      </span>
    </button>
  </div>
</div>
`;

exports[`Select Artifact - For Artifact tests on click of select button 1`] = `
<div
  class="bp3-dialog selectArtifactModal padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipeline.artifactTriggerConfigPanel.selectAnArtifact
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="TableV2--table selectArtifactTable"
  >
    <div
      class="TableV2--header"
      role="row"
    >
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactName"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACT
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactRepository"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 18%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactManifestLocation"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 13%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactBuildTag"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.BUILDTAGARTIFACTPATH
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 18%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactManifestRuntimeInputs"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
            </span>
          </div>
        </p>
      </div>
    </div>
    <div
      class="TableV2--body"
    >
      <div
        class="TableV2--row TableV2--card TableV2--clickable"
        role="row"
      >
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 5%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            style="justify-content: center;"
          >
            <div>
              <label
                class="bp3-label"
              />
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="artifactLabel"
                  type="radio"
                  value="stagea: Primary"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 25%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 176px;"
            >
              stagea: Primary
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 25%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 159px;"
            >
              Runtime Input
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 18%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
            />
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 13%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1; width: 100px;"
            />
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 18%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Yes
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
      data-name="selectBtn"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        select
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main cancel Button--with-current-color Button--variation Button--variation-tertiary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        cancel
      </span>
    </button>
  </div>
</div>
`;

exports[`Select Artifact - For Artifact tests when selected tag is not runtime input 1`] = `
<div
  class="bp3-dialog selectArtifactModal padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipeline.artifactTriggerConfigPanel.selectAnArtifact
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="TableV2--table selectArtifactTable"
  >
    <div
      class="TableV2--header"
      role="row"
    >
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactName"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACT
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactRepository"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 18%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactManifestLocation"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 13%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactBuildTag"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.BUILDTAGARTIFACTPATH
            </span>
          </div>
        </p>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 18%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="artifactManifestRuntimeInputs"
          >
            <span
              class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
            >
              PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
            </span>
          </div>
        </p>
      </div>
    </div>
    <div
      class="TableV2--body"
    >
      <div
        class="TableV2--row TableV2--card TableV2--clickable"
        role="row"
      >
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 5%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            style="justify-content: center;"
          >
            <div>
              <label
                class="bp3-label"
              />
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="artifactLabel"
                  type="radio"
                  value="stagea: Primary"
                />
                <span
                  class="bp3-control-indicator"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 25%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 176px;"
            >
              stagea: Primary
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 25%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1; width: 159px;"
            >
              Runtime Input
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 18%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
            />
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 13%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="min-height: 18px; --text-line-clamp: 1; width: 100px;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          role="cell"
          style="width: 18%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Yes
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
      data-name="selectBtn"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        select
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main cancel Button--with-current-color Button--variation Button--variation-tertiary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        cancel
      </span>
    </button>
  </div>
</div>
`;
